jenkins/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true" 
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"

spec:
  ingressClassName: nginx
  rules:
    - host: jenkins.devsecmindset.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins-prod
                port:
                  number: 8080
